# Claude-Code-Game-Studios

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/docs/: technical-preferences.md
assets/content/: upgrades.json  weapons.json
design/gdd/: arena.md  boss-encounter.md  content-database.md  damage-calculation.md  end-of-run-screen.md  enemy-data.md  enemy-system.md  game-concept.md  gold-economy.md  hud.md  isometric-camera.md  mana-shield.md  projectile-system.md  run-manager.md  run-statistics.md  shop-system.md  shop-ui.md  status-effects.md  systems-index.md  tower-entity.md  wave-escalation.md  weapon-system.md
docs/architecture/: adr-0001-bevy-plugin-structure.md
docs/engine-reference/bevy/: VERSION.md  breaking-changes.md  deprecated-apis.md
src/: main.rs
src/components/: combat.rs  economy.rs  enemy.rs  mod.rs  run.rs  scaling.rs  stats.rs  tower.rs
src/data/: damage_matrix.rs  enemies.rs  mod.rs  upgrades.rs  weapons.rs
src/plugins/: combat.rs  content.rs  core.rs  debug.rs  economy.rs  enemy.rs  mod.rs  run.rs  ui.rs
