[package]
name = "tower-of-doom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

# Faster compile times for dev
[profile.dev]
opt-level = 1

# But optimize dependencies even in dev
[profile.dev.package."*"]
opt-level = 3
